# NewRepo

./: CMakeLists.txt
Docx/: CMakeLists.txt  CMakeProject1.cpp
Docx/res/: test.docx
